--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/slcomputacion/Library/Application Support/NetBeans/16/build.properties
+user.properties.file=C:\\Users\\slb_1\\AppData\\Roaming\\NetBeans\\14\\build.properties
