--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/home/salvador/.netbeans/20/build.properties
+user.properties.file=/Users/salvadorlopezbaltazar/Library/Application Support/NetBeans/21/build.properties
