--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/InversionGBM
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.22-bin.jar=jar/mysql-connector-java-5.1.22-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.22-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
