--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,15 +43,15 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.22-bin.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=24
+javac.target=24
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -105,7 +105,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
